# dex_live

./: MANIFEST.in  README.md  pyproject.toml
src/dex_live/: __init__.py  base.py
src/dex_live/chain/: __init__.py  manager.py
src/dex_live/chain/arbitrum/: __init__.py  chain.py
src/dex_live/chain/base/: __init__.py  chain.py  wallet.py
src/dex_live/chain/ethereum/: __init__.py  chain.py  wallet.py
src/dex_live/exchange/: __init__.py  manager.py
src/dex_live/exchange/algebra_dex/: __init__.py  edge.py  factory.py  pool.py  router.py
src/dex_live/exchange/base/: __init__.py  edge.py  factory.py  pool.py  router.py
src/dex_live/exchange/camelot_v2/: __init__.py  config.yml  edge.py  factory.py  pool.py  router.py
src/dex_live/exchange/camelot_v2/abi/: factory.json
src/dex_live/exchange/camelot_v2/address_book/: arbitrum.csv
src/dex_live/exchange/camelot_v3/: __init__.py  config.yml  edge.py  factory.py  pool.py  router.py
src/dex_live/exchange/pancakeswap_v3/: __init__.py  config.yml  edge.py  factory.py  pool.py  router.py
src/dex_live/exchange/sushiswap_v2/: __init__.py  config.yml  edge.py  factory.py  pool.py  router.py
src/dex_live/exchange/uniswap_v2/: __init__.py  config.yml  edge.py  factory.py  pool.py  router.py
src/dex_live/exchange/uniswap_v3/: __init__.py  config.yml  edge.py  factory.py  pool.py  router.py
src/dex_live/token/: __init__.py  base.py  tokens.yml
src/dex_live/token/erc20/: contract.py
util/: generate_wallet.ipynb  manual_swap.ipynb  update_address_book.ipynb
(+7 files in other folders)
